Naprawiono błąd z wstawianiem większej ilości kolumn niż 12. Wprowadzono możliwość ustawiania obrazków w poszczególnych komórkach za pomocą prawego przycisku myszy.

--- a/SWD/SWD/SWD.csproj
+++ b/SWD/SWD/SWD.csproj
@@ -52,6 +52,7 @@
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Pipelines, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.Pipelines.9.0.0\lib\net462\System.IO.Pipelines.dll</HintPath>
     </Reference>
@@ -161,6 +162,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\save-file.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\add.png" />
+    <Resource Include="Icons\image.png" />
+    <Resource Include="Icons\text.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
