Fixed problems with DataGrid It now correctly works when a row/column preceeding component's start row/column is added. In addition component's width and height can be adjusted in a specialized panel.

--- a/SWD/SWD/SWD.csproj
+++ b/SWD/SWD/SWD.csproj
@@ -97,6 +97,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Content\ContentWindow.CompModifying.cs" />
     <Compile Include="Content\ContentWindow.DGBuilding.cs" />
     <Compile Include="Content\ContentWindow.CompHandling.cs" />
     <Compile Include="Content\ContentWindow.DGModifying.cs" />
