--- a/SWD/SWD/SWD.csproj
+++ b/SWD/SWD/SWD.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Content\ContentWindow.DGSizing.cs" />
     <Compile Include="Content\ContentWindow.FSBuilding.cs" />
     <Compile Include="Content\ContentWindow.FSManaging.cs" />
+    <Compile Include="Content\ContentWindowFSControl.cs" />
     <Compile Include="InputDialog.xaml.cs">
       <DependentUpon>InputDialog.xaml</DependentUpon>
     </Compile>
@@ -195,6 +196,8 @@
   <ItemGroup>
     <Resource Include="Icons\edit.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Icons\code.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
