Toolbar was significantly improved Files and projects can now be saved, opened and created using the toolbar. Initial settings (metadata) can now be accessed and edited. Folder structure DataGrid and insides of current file's folder can now be refreshed. Toolbar utilizes ContextMenu via hover. Close button for the Content Window has been added.

--- a/SWD/SWD/SWD.csproj
+++ b/SWD/SWD/SWD.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Content\ContentWindow.DGSizing.cs" />
     <Compile Include="Content\ContentWindow.FSBuilding.cs" />
     <Compile Include="Content\ContentWindow.FSManaging.cs" />
+    <Compile Include="Content\ContentWindow.Toolbar.cs" />
     <Compile Include="Content\ContentWindowFSControl.cs" />
     <Compile Include="InputDialog.xaml.cs">
       <DependentUpon>InputDialog.xaml</DependentUpon>
@@ -198,6 +199,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\code.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\refresh.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\build.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
