First working prototype has been completed! ComponentWindow has been heavily improved. It now includes a working text editor as well as an option to add an image. CreationWindow has been upgraded. Now you can tweak there your Header, Footer, Body and Grid styles. Build button has finally gotten its functionality. JSON files created on the way are used to build your own website!

--- a/SWD/SWD/SWD.csproj
+++ b/SWD/SWD/SWD.csproj
@@ -98,10 +98,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Build.cs" />
     <Compile Include="Components\ComponentWindow.xaml.cs">
       <DependentUpon>ComponentWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Components\Converter.cs" />
+    <Compile Include="Components\ImageSimple.xaml.cs">
+      <DependentUpon>ImageSimple.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Components\TextSimple.xaml.cs">
       <DependentUpon>TextSimple.xaml</DependentUpon>
     </Compile>
@@ -122,6 +126,10 @@
       <DependentUpon>ThemeWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Components\ComponentWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Components\ImageSimple.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
