ButtonSimple Page was finished script.js is now generated. Small bug fixes implemented. Comments added for the entirety of the code.

--- a/SWD/SWD/SWD.csproj
+++ b/SWD/SWD/SWD.csproj
@@ -277,5 +277,8 @@
     <Resource Include="Icons\middle.png" />
     <Resource Include="Icons\top.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\button.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
